--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -17,3 +17,8 @@ search=Searching...
 titleForm=Find Movies
 footerLink=Explore the IMDb Movie Database
 messageToast=Do you feel like going to the movies?
+cinemaName=Cinema Name
+cinemaAddress=Cinema Address
+special=Special of the Day
+technicalDetails=Technical Details
+seats=Seats
