--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,7 +1,7 @@
 #~~~ Home View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 title=Watch Movies
-appTitle=Watch Movies
+appTitle=Watch Movies (tit)
 appDescription=Find your favorite movie showtimes
 imageTooltip=Movie illustration
 labelCity=City
@@ -22,3 +22,8 @@ cinemaAddress=Cinema Address
 special=Special of the Day
 technicalDetails=Technical Details
 seats=Seats
+
+landmarkContent=Content
+landmarkFooter=Footer
+landmarkMainPage=Movies Page
+landmarkDetailPage=Movies Detail Page
